PROJECT(Helloworld)
 
#Required in DGtal
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
cmake_policy(SET CMP0057 NEW)
set(CMAKE_CXX_STANDARD 11)
 
FIND_PACKAGE(DGtal REQUIRED)
INCLUDE_DIRECTORIES(${DGTAL_INCLUDE_DIRS})
LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})
 
ADD_EXECUTABLE(main main)
TARGET_LINK_LIBRARIES(main ${DGTAL_LIBRARIES})